fixed bug of portlet topper z-index being hardcoded -added to sitemap.json up to blog portlet

--- a/nyxl-theme/src/css/_header.scss
+++ b/nyxl-theme/src/css/_header.scss
@@ -36,10 +36,6 @@
 		font-family: $nav-font;
 	}
 
-	.portlet-topper {
-		z-index: 1600;
-	}
-
 	#heading > a.custom-logo > img {
 		height: auto;
 		width: 85px;
