--- a/nyxl-theme/src/css/_roster.scss
+++ b/nyxl-theme/src/css/_roster.scss
@@ -8,6 +8,7 @@
         align-items: center;
     }
 
+    .portlet-body .h2,
     .pull-right {
         display: none;
     }
